<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".controller.CreateMeetingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:focusableInTouchMode="true">


        <EditText
            android:id="@+id/meeting_subject_editText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="20dp"
            android:hint="@string/create_activity_choose_subject_hint"
            android:textSize="18sp"
            android:inputType="text"/>




        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

             <TextView
                 android:id="@+id/start_textView"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:text="@string/create_activity_tv_start_meeting"
                 android:textColor="@color/design_default_color_primary_dark"
                 android:textSize="20sp"
                 android:textStyle="bold" />

             <Button
                 android:id="@+id/select_date_btn"
                 android:layout_width="wrap_content"
                 android:layout_height="match_parent"
                 android:paddingRight="35dp"
                 android:paddingLeft="35dp"
                 android:layout_gravity="center_horizontal"
                 android:hint="@string/create_activity_start_btn"
                 android:textSize="18sp" />

        </LinearLayout>






        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/end_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/create_activity_tv_end_meeting"
                android:textColor="@color/design_default_color_primary_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/select_end_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="35dp"
                android:paddingLeft="35dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/create_activity_end_btn"
                android:textSize="18sp" />

        </LinearLayout>







        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/select_room_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/create_activity_tv_select_room"
                android:textColor="@color/design_default_color_primary_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/room_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:paddingRight="35dp"
                android:paddingLeft="35dp"
                android:layout_gravity="center_horizontal"
                android:hint="@string/create_activity_select_room_btn"
                android:textSize="18sp"
                android:onClick="roomSelector">
            </Button>
        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/mactv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:text="@string/create_activity_select_participants_tv"
                android:textColor="@color/design_default_color_primary_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

            <MultiAutoCompleteTextView
                android:id="@+id/multiautocompletetextview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:hint="@string/create_activity_enter_participant"
                android:textColor="@color/design_default_color_primary_dark"
                android:textSize="16sp"
                android:textStyle="bold"
                tools:ignore="DuplicateIds"
                android:inputType="text"/>

        </LinearLayout>







    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
        android:id="@+id/reunionAboutLyt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"/>
    </LinearLayout>







        <Button
            android:id="@+id/save_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/design_default_color_primary_dark"
            android:padding="15dp"
            android:layout_marginTop="50dp"
            android:text="@string/create_activity_save_btn"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:onClick="onCreateMeetingClicked"/>


    </LinearLayout>

</ScrollView>
