<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/filter_icon"
            app:showAsAction="ifRoom|collapseActionView" />
        <item
            android:id="@+id/reset"
            android:checkable="false"
            android:title="@string/main_menu_reset_filters" />


        <item
            android:id="@+id/filter_by_date"
            android:checkable="false"
            android:title="@string/main_menu_filter_by_date" />

        <item
            android:id="@+id/filter_by_room"
            android:checkable="false"
            android:title="@string/main_menu_filter_by_room">

        </item>


    </group>
</menu>