<resources>
    <string name="app_name">Ma réu</string>

    <string name="select_item">Trier</string>
    <string name="filter_item">Filtrer</string>
    <string name="create_meeting_title">Créez votre réunion</string>
    <string name="create_activity_choose_subject_hint">Indiquez le sujet de la réunion</string>
    <string name="create_activity_tv_start_meeting">Elle débute quand ?</string>
    <string name="create_activity_start_btn">Cliquer ici</string>
    <string name="create_activity_tv_end_meeting">Elle se termine quand ?</string>
    <string name="create_activity_end_btn">Cliquer ici</string>
    <string name="create_activity_tv_select_room">Dans quelle salle ?</string>
    <string name="create_activity_select_room_btn">Cliquer ici</string>
    <string name="create_activity_select_participants_tv">Avec qui ?</string>
    <string name="create_activity_enter_participant">Tapez les prénoms des participants</string>
    <string name="create_activity_save_btn">Enregistrer</string>


    <string name="menu_filter">Filtrer</string>
    <string name="tv_email">maxime@lamzone.com</string>
    <string name="main_menu_reset_filters">Réinitialiser les filtres</string>
    <string name="main_menu_filter_by_date">par date</string>
    <string name="main_menu_filter_by_room">par salle</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="select_room">Sélectionner une salle</string>
    <string name="warning">ATTENTION</string>
    <string name="error_please_insert_participant">Merci d\'indiquer au moins un participant.</string>
    <string name="error_please_select_room">Vous devez sélectionner une salle de réunion.</string>
    <string name="error_room_unavailable">Cette salle n\'est plus disponible.</string>
    <string name="error_specify_end_time">Merci de préciser l\'heure de fin de la réunion.</string>
    <string name="error_specify_start_time">Veillez à bien indiquer une date et une heure de début.</string>
    <string name="error_please_modify_end_time">Merci de modifier l\'heure de fin de réunion qui ne peut être antérieure à l\'heure de début.</string>
    <string name="error_specify_subject">Merci d\'indiquer le sujet de la réunion.</string>
    <string name="toast_deleted_meeting">Réunion supprimée</string>
    <string name="menu_reset_meetings">Menu Réinitialiser les réunions sélectionné</string>
    <string name="menu_filter_by_date">Menu Filtrer par date sélectionné</string>
    <string name="menu_filter_by_room">Menu Filtrer par salle sélectionné</string>
    <string name="alertDialog_select_a_room">Sélectionner une salle</string>

</resources>
